tests/lean/345.lean
axiom bla : 1

structure Foo where
  foo : 1

inductive Bla (x : 1) : Type
